src/app/announcement/announcement-search/announcement-search.component.scss
@use 'src/app/am-mixins' as *;

@include danger-action;
@include ocx-text-responsive;
@include ocx-floatlabel;
@include ocx-p-inputgroup;
@include ocx-modal-dialog;
@include ocx-interactive-data-view-fixes;
@include p-table-zebra-rows;
@include table-inline-p-buttons;
@include table-responsive-table-cell;

:host ::ng-deep {
  .ocx-content > div {
    margin-bottom: 0 !important;
  }

  .p-datatable {
    --table-zebra-first-column-even-bg: inherit;

    .p-datatable-thead > tr > th {
      border-bottom-width: 2px;
      &:first-child .table-header-wrapper {
        justify-content: center !important;
      }
    }

    .p-datatable-thead > tr > th,
    .p-datatable-tbody > tr > td {
      padding: 0.5rem;
      /* action column */
      &:first-child {
        border-right: 1px solid var(--surface-border, #dee2e6);
        width: 1rem;
        white-space: nowrap;
        text-align: center;
        padding-left: 1rem;
        padding-right: 1rem;
      }
      .icon-button-row-wrapper {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        column-gap: 0rem;
      }
      button.editTableRowButton {
        order: 1;
      }
      button.copy-action-button {
        order: 2;
      }
      button.deleteTableRowButton {
        order: 3;
      }
    }

    /* action buttons */
    .p-datatable-thead > tr > th:nth-child(2) {
      text-align: center;
    }
  }

  .max-height-for-2-lines {
    max-height: 2.5rem;
  }
  .text-ellipsis-2-lines {
    @include displaying-text-ellipsis(2);
  }
}

